# zlog

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  version.h
src/cmake/: pkgconfig.cmake.in  zlog.pc.in  zlogConfig.cmake.in
